# eambfc-rs

./: .codespellrc  .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  Cargo.lock.license  Cargo.toml  README.md  REUSE.toml  build.rs  tarpaulin.toml
.githooks/: pre-push
src/: arch_inter.rs  arg_parse.rs  arm64_encoders.rs  backend_arm64.rs  backend_s390x.rs  backend_x86_64.rs  backends.rs  compile.rs  eam_compile.rs  elf_tools.rs  err.rs  fsutil.rs  main.rs  optimize.rs  run_config.rs  version_template.txt  x86_64_encoders.rs
src/arg_parse/: help_text.rs  longopts.rs  tests.rs
src/backends/: arm64.rs  s390x.rs  x86_64.rs
src/compile/: arch_inter.rs  backends.rs  elf_tools.rs  fsutil.rs  optimize.rs
src/compile/backends/: arm64.rs  riscv64.rs  s390x.rs  x86_64.rs
src/text_assets/: help_template.txt  help_template.txt.license  version_template.txt
test_assets/: .gitignore  dead_code.bf  loop.bf  unmatched_close.bf  unmatched_open.bf  unmatched_open.bf.license  wrap2.bf
test_assets/bf_sources/: alternative_extension.brnfck  colortest.bf  non_ascii_positions.bf  null.bf  rw.bf  truthmachine.bf
test_assets/exec_support/: README  README.md  arm64  arm64.license  check_bins.py  riscv64  s390x  s390x.license  x86_64  x86_64.license
test_assets/templates/: hello.bf  loop.bf.license  wrap.bf
test_assets/x86_64/: .gitignore
test_macros/: Cargo.lock.license  Cargo.toml
test_macros/src/: lib.rs
tests/: cli_test.rs  integration.rs
tooling/: README.md  cargo_config.toml
tooling/githooks/: pre-commit  pre-push
