# SPDX-FileCopyrightText: 2025 Eli Array Minkoff
#
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "test_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
cfg-if = "1.0.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }
